@startuml ER Diagram for CityVet Pet Management System

entity User {
  * id : number <<generated>>
  --
  * first_name : text
  * middle_name : text
  * last_name : text
  * contact_number : text
  * emergency_contact : text
  * street : text
  * barangay : text
  * city_municipality : text
  * province : text
  * zip_code : text
  * email : text <<unique>>
  * password : text
  * role : enum('user', 'admin')
  email_verified_at : datetime
  created_at : datetime
  updated_at : datetime
}

entity Pet {
  * id : number <<generated>>
  --
  * user_id : number <<FK>>
  * species : text
  * breed : text
  estimated_age_years : number
  estimated_age_months : number
  gender : enum('male', 'female')
  color_markings : text
  description : text
  photo : text
  * status : enum('registered', 'impounded', 'adoptable', 'adopted', 'claimed', 'unclaimed', 'unadopted', 'pending')
  impounded_date : date
  caught_location : text
  decision_date : date
  remaining_days : number
  urgent_deadline : datetime
  registration_status : text
  admin_notes : text
  created_at : datetime
  updated_at : datetime
}

entity PetRequest {
  * id : number <<generated>>
  --
  * user_id : number <<FK>>
  * type : text
  * status : text
  reason : text
  contact_info : text
  * requestable_id : number <<FK>>
  * requestable_type : text
  admin_notes : text
  photos : text
  additional_data : text
  created_at : datetime
  updated_at : datetime
}

entity Poster {
  * id : number <<generated>>
  --
  * user_id : number <<FK>>
  * type : enum('lost', 'found')
  pet_name : text
  species : text
  breed : text
  gender : enum('male', 'female')
  color_markings : text
  date_lost_found : date
  last_seen : text
  found_at : text
  photo : text
  contact_info : text
  reward : decimal
  approved : boolean
  * status : text
  description : text
  uploader_comments : text
  location_details : text
  created_at : datetime
  updated_at : datetime
}

entity Announcement {
  * id : number <<generated>>
  --
  * title : text
  * category : text
  description : text
  date_when : text
  location : text
  created_at : datetime
  updated_at : datetime
}

entity PetRegistration {
  * id : number <<generated>>
  --
  * user_id : number <<FK>>
  pet_name : text
  species : text
  breed : text
  birthday : date
  gender : enum('male', 'female')
  color_markings : array
  description : text
  photo : text
  * status : text
  created_at : datetime
  updated_at : datetime
}

' Relationships
User ||..o{ Pet : "1..* (registered)"
User ||..o{ Poster : "1..*"
User ||..o{ PetRequest : "1..*"
User ||..o{ PetRegistration : "1..*"
Pet ||..o{ PetRequest : "1..* (polymorphic)"
PetRequest }o..|| Pet : "polymorphic (requestable)"

@enduml
